--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -64,8 +64,9 @@
    \author{Sven Heydenreich\inst{1}%\fnmsep\thanks{sven@astro.uni-bonn.de}
           \and Peter Schneider\inst{1} 
           \and Hendrik Hildebrandt\inst{2,1}
-          \and Catherine Heymans\inst{3} 
+          \and Catherine Heymans\inst{3,2} 
           \and Marika Asgari\inst{3}
+          \and Jan Luca Van den Busch\inst{2,1}
           \and Chieh-An Lin\inst{3,5,6}
           \and Benjamin Joachimi\inst{4}
           \and Tilman Tr\"{o}ster\inst{3}
@@ -109,7 +110,7 @@ Fenglin Veteran Hospital, 2 Zhongzheng Rd. Sec. 1, Fenglin Township, Hualien 975
 %-------------------------------------------------------------------
 \section{Introduction}
 The discovery of cosmic shear has provided us with a new and powerful cosmological tool to investigate the standard model of cosmology and to determine its parameters. Contrary to the analysis of the Cosmic Microwave Background (CMB) by \citet{2018arXiv180706209P}, cosmic shear is more sensitive to the properties of the local Universe and thus provides an excellent consistency check for the standard model. Current cosmic shear surveys are especially sensitive to the parameter $S_8=\sigma_8 \sqrt{\Omega_{\rm m}/0.3}$, where $\sigma_8$ denotes the normalization of the matter power spectrum and $\Omega_{\rm m}$ is the matter density.
-It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Combined analyses of DES and KiDS data \citep{Joudaki:2019} yields even higher tension with the value determined for $S_8$ by the Planck Collaboration \todo{we should cite marikas new paper here as soon as it is there}. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
+It is interesting to note that all three current major cosmic shear results report a lower $S_8$ than inferred from the CMB analysis: While \citet{2018arXiv180706209P} determined a value of $S_8 = 0.830 \pm 0.013$, \citet{2018arXiv180909148H} report $S_8 = 0.800^{+0.029}_{-0.028}$ from analysis of the Subaru Hyper Suprime-Cam survey, \citet[][hereafter H18]{2018arXiv181206076H} obtained $0.737_{-0.036}^{+0.040}$ from KiDS+VIKING data and the Dark Energy Survey \citep[DES,][]{2018PhRvD..98d3528T} arrived at $S_8=0.782\pm 0.027$. Also, \citet{2013MNRAS.432.2433H} report $S_8 = 0.759 \pm 0.020$ from their analysis of CFHTLens data. Combined analyses of DES and KiDS data \citep{Joudaki:2019} yield even higher tension with the value determined for $S_8$ by the Planck Collaboration \todo{we should cite marikas new paper here as soon as it is there}. This discrepancy has received a lot of attention \citep{2017MNRAS.471.1259J,2016MNRAS.459..971K}. It could be interpreted as a statistical coincidence, a sign of new physics like massive neutrinos \citep{2014PhRvL.112e1303B}, time-varying dark energy or modified gravity \citep{2016A&A...594A..14P}; or as the manifestation of a systematic effect, either in the cosmic shear surveys or in the Planck mission \citep{2016ApJ...818..132A}, that is not yet accounted for. 
 
 For current cosmic shear surveys, the estimated systematic error is of comparable size to the statistical error, implying that for next-generation surveys, a significant reduction of systematic errors is necessary \citep[][hereafter H17]{2017MNRAS.465.1454H}. With surveys like the Large Synoptic Survey Telescope \citep[LSST,][]{Ivezic:2008} and Euclid \citep{Laureijs:2011} soon to start, systematic effects in gravitational lensing have received a large amount of attention \citep{2018arXiv181002353A,2019arXiv190207439B,2019arXiv190109488S}. %\todo{Citations.. \citet{2017MNRAS.464.1676A} has a few...}
 
@@ -126,7 +127,7 @@ The depth of a pointing primarily influences the number density as well as the a
 \label{fig:nz_of_meanz}
 \end{figure}
 %
-In Sect. \ref{sec:modelling_single_lens} we will introduce a simple toy model to understand this effect and analyze the impact on the cosmic shear power spectrum. In Sect. \ref{sec:xipm} we will estimate the effect on the shear correlation functions $\xi_\pm$ using two different models. We will present our results in Sect. \ref{sec:results}. In Sect. \ref{sec:discussion} we will discuss our results and comment on the impacts of our used simplifications. We will assume the standard weak gravitational lensing formalism, a summary of which can be found in \citet{2001PhR...340..291B}.
+In Sect. \ref{sec:modelling_single_lens} we will introduce a simple toy model to understand this effect and analyze the impact on the cosmic shear power spectrum. In Sect. \ref{sec:xipm} we will estimate the effect on the shear correlation functions $\xi_\pm$ using two different models. We will present our results in Sect. \ref{sec:results}. In Sect. \ref{sec:discussion} we will discuss our results and comment on the impact of our used simplifications. We will assume the standard weak gravitational lensing formalism, a summary of which can be found in \citet{2001PhR...340..291B}.
 
 %-------------------------------------------------------------------
 
@@ -143,7 +144,7 @@ For our first analysis we assume that all the matter between sources and observe
 %where $B$-Modes can not be generated by a lensing signal and are thus a tracer of remaining systematics.
 %2002A&A...389..729S SRC
 
-Assuming that the depth, and thus the source redshift populations, varies between pointings of the camera, an observer will measure a shear-signal that is modified by a step-like depth-function $\gammao(\b\theta)=W(\b \theta)\gamma(\b\theta)$, where $W$ is proportional to the mean of the lensing efficiency $\Dds/\Ds$ of one pointing and $\gamma$ denotes the shear that this pointing would read if it were of average depth.
+Assuming that the depth, and thus the source redshift population, varies between pointings of the camera, an observer will measure a shear-signal that is modified by a step-like depth-function $\gammao(\b\theta)=W(\b \theta)\gamma(\b\theta)$, where $W$ is proportional to the mean of the lensing efficiency $\Dds/\Ds$ of one pointing and $\gamma$ denotes the shear that this pointing would read if it were of the average depth.
 We can parametrize $W$ as $W(\bm{\theta}) = 1+w(\bm{\theta})$, where $\langle w(\bm{\theta})\rangle=0$ holds. 
 In accordance to the definition of the shear power spectrum \begin{equation}
 \la \hat{\gamma}(\b\ell)\,\hat{\gamma}^*(\b\ell')\ra = (2\pi)^2\delta(\b\ell-\b\ell')P(|\b\ell|) \, ,
@@ -191,7 +192,7 @@ Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies pe
  \label{eq:xipmblub1}
  \end{align}
  where the average $\la\ldots\ra$ represents both an ensemble average as well as an average over the position $\bth$.
- Assuming that depth of different pointings is uncorrelated implies that the same holds for the functions $W$ and $N$. This means that the only important property of a galaxy pair is whether or not they lie in the same pointing. We want to denote the probability that a random galaxy pair of separation $\theta$ lies in the same pointing, by $E(\theta)$. This function is depicted in Fig. \ref{fig:eoftheta_lin}, and an analytical expression is derived in App. \ref{sec:model_e}.
+ Assuming that the depth of different pointings is uncorrelated implies that the same holds for the functions $W$ and $N$. This means that the only important property of a galaxy pair is whether or not they lie in the same pointing. We want to denote the probability that a random galaxy pair of separation $\theta$ lies in the same pointing, by $E(\theta)$. This function is depicted in Fig. \ref{fig:eoftheta_lin}, and an analytical expression is derived in App. \ref{sec:model_e}.
  
 \begin{figure}
  \centering
@@ -208,7 +209,7 @@ To compute the modified shear correlation functions, we parametrize the number d
 + \la n^jw^iw^j\ra \nonumber\\
 & \qquad\quad\left.+ \la n^in^jw^iw^j\ra  \right] \, .
  \end{align}
-Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It is not inherently obvious that this is a valid assumption. However, after performing calculations with and without higher order correlations, the highest difference between the outcomes of both equations was less then $5\times 10^{-4}$.} and performing the same calculation for the denominator of Eq.\,\eqref{eq:xipmblub1}, we get
+Ignoring correlations higher than second order in $n^i$ and $w^i$,\footnote{It is not inherently obvious that this is a valid assumption. However, after performing calculations with and without higher order correlations, the highest relative difference between the outcomes of both equations was less then $5\times 10^{-4}$.} and performing the same calculation for the denominator of Eq.\,\eqref{eq:xipmblub1}, we get
  \begin{align}
  \xi^{ij,\rm{obs}}_\pm(\theta) = & \left[ 1 + \la n^iw^i\ra + \la n^jw^j\ra + E(\theta)\left(\la n^in^j\ra + \la n^iw^j\ra \right.\right. \nonumber\\
  &\left.\left. + \la n^j w^i\ra + \la w^iw^j\ra\right)\right]\, \left[1+E(\theta)\la n^i n^j\ra \right]\inv\xi^{ij,\rm{uni}}_\pm (\theta) \, .
@@ -236,7 +237,15 @@ The previously derived analytic model describes how varying depth between pointi
 
 Below we derive a more sophisticated model that includes the effects of the LSS. While it is computationally more expensive, it yields accurate results for cosmic shear surveys, which are sensitive to the exact redshift distributions of sources as well as the underlying cosmology.
 
-An inspection of KiDS-data showed that the redshift distribution of sources is highly correlated with the depth in the $r$-band\todo{This is basically from unpublished data of a KV450 WG telecon. Should/can I cite something here?}. We thus chose to separate the survey into 10 percentiles, sorted by $r$-band depth, i.e. if a pointing had a shallower depth than 90\% of the other pointings, it would belong to the first percentile, and so on. For each percentile $m$ and each tomographic redshift bin $i$ we can extract a weighted number of galaxies $N^i_m$ and, a source redshift distribution $p^i_m(z)$ following the DIR method of H17\footnote{Instead of using the actual number of galaxies, we take the sum of their lensing weights, following H17. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.}. Asserting an arbitrary cosmological model, we can transform the source redshift distributions $p^i_m(z)$ into comoving distance probability distributions $\mathcal{L}^i_m(\chi)$.
+An inspection of KiDS-data showed that the redshift distribution of sources is highly correlated with the depth in the $r$-band\todo{This is basically from unpublished data of a KV450 WG telecon. Should/can I cite something here?}. We thus chose to separate the survey into 10 percentiles, sorted by $r$-band depth, i.e. if a pointing had a shallower depth than 90\% of the other pointings, it would belong to the first percentile, and so on. For each percentile $m$ and each tomographic redshift bin $i$ we can extract a weighted number of galaxies $N^i_m$ and, a source redshift distribution $p^i_m(z)$ following the DIR method of H18\footnote{Instead of using the actual number of galaxies, we take the sum of their lensing weights, following H17. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.}. The weighted numbers of Galaxies can be seen in Fig. \ref{fig:nz_of_meanz}, whereas the source redshift distributions are depicted in Fig. \ref{fig:nofz_percentiles}.
+%
+\begin{figure}
+\centering
+\includegraphics[trim = {1cm 0 1.2cm 0.1cm}, clip, width=\linewidth]{images/dist_z_all.pdf}
+\caption{The source redshift distributions $p^i_m(z)$ for the best, average, and worst percentile in each tomographic redshift bin.}
+\label{fig:nofz_percentiles}
+\end{figure}
+% Asserting an arbitrary cosmological model, we can transform the source redshift distributions $p^i_m(z)$ into comoving distance probability distributions $\mathcal{L}^i_m(\chi)$.
 
 Given two comoving distance probability distributions of sources $\mathcal{L}^i_m(\chi),\mathcal{L}^j_n(\chi)$, we can compute the shear correlation functions from the underlying matter power spectrum $P(\ell,\chi)$ via \citep[compare][]{1992ApJ...388..272K} \begin{align}
 \label{eq:xipm-pkappa}
@@ -278,7 +287,7 @@ C = \sum_{m=1}^{10} N_m^i \bigg[ E(\theta)  N_m^j + \frac{\big[1-E(\theta)\big]}
 \]
 A mathematically more rigorous derivation of this function can be found in Appendix \ref{sec:calc of xipm}.
 
-If we want to compute this for all 5 redshift bins of the KV450-survey, this forces us to calculate and coadd 1275 correlation functions\footnote{For each of the 15 pairs redshift bins we need to calculate 100 correlation functions, except for the pairs of bins with the same redshift, where only 55 correlation functions need to be calculated due to symmetry.}. Since we are investigating an effect that is of the order of a percent, even small numerical errors can add up, skewing the calculations. Additionally, calculating $10^3$ correlation functions is computationally expensive. However, if we examine Eq.~\eqref{eq:lenseff}, we see that the comoving distance distribution of sources enters linearly. This in turn implies that in Eqs.~\eqref{eq:pkappa-pdelta/lenseff} and \eqref{eq:xipm-pkappa}, both source distance distributions enter linearly, meaning that, instead of adding correlation functions, we can add their respective redshift distributions and compute the correlation functions of that. In particular, we can define the \textit{combined number of galaxies} $N^i$ and \textit{average comoving distance probability distribution} $\mathcal{L}^i(\chi)$ of tomographic bin $i$ as \[
+If we want to compute this for all 5 redshift bins of the KV450-survey, this forces us to calculate and coadd 1275 correlation functions\footnote{For each of the 15 pairs of redshift bins we need to calculate 100 correlation functions, except for the pairs of bins with the same redshift, where only 55 correlation functions need to be calculated due to symmetry.}. Since we are investigating an effect that is of the order of a percent, even small numerical errors can add up, skewing the calculations. Additionally, calculating $10^3$ correlation functions is computationally expensive. However, if we examine Eq.~\eqref{eq:lenseff}, we see that the comoving distance distribution of sources enters linearly. This in turn implies that in Eqs.~\eqref{eq:pkappa-pdelta/lenseff} and \eqref{eq:xipm-pkappa}, both source distance distributions enter linearly, meaning that, instead of adding correlation functions, we can add their respective redshift distributions and compute the correlation functions of that. In particular, we can define the \textit{combined number of galaxies} $N^i$ and \textit{average comoving distance probability distribution} $\mathcal{L}^i(\chi)$ of tomographic bin $i$ as \[
 N^i\equiv\sum_m N_m^i\, , \qquad \mathcal{L}^i(\chi) = \frac{\sum_m N_m^i \mathcal{L}_m^i(\chi)}{\sum_m N_m^i} \, .
 \]
 If we define $\xi^{ij}_\pm$ as the correlation functions between the average comoving distance distributions $\mathcal{L}^i(\chi)$ and $\mathcal{L}^j(\chi)$, we find: \begin{align}
@@ -302,7 +311,7 @@ For each pair of redshift bins we thus only have to compute eleven correlation f
 
 \section{Results}
 \label{sec:results}
-Here we apply both the analytic and the semi-analytic method to model the data from the KiDS+VIKING-450 survey \citep[KV450,][]{Wright:2018}. While the application of the semi-analytic method is straightforward, for the analytic method we need to decide how to estimate the weight function $W$ from given redshift data. Following the separation of a survey into percentiles as in Sect. \ref{sec:xipm_semianalytic}, we define $W(\b\theta)\equiv W_n$ whenever $\b\theta$ is in a pointing of percentile $n$. For the determination of $W_n$ we tried two approaches:
+Here we apply both the analytic and the semi-analytic method to model the data from the KiDS+VIKING-450 survey \citep[KV450,][]{Wright:2018}. While the application of the semi-analytic method is straightforward, for the analytic method we need to decide how to estimate the weight function $W$ from given redshift data. Following the separation of a survey into percentiles as in Sect. \ref{sec:xipm_semianalytic}, we define $W(\b\theta)\equiv W_n$ whenever $\b\theta$ is in a pointing of percentile $n$. For the determination of $W_n$ we test two approaches:
  As a first method, following \citet{2006APh....26...91V,1997A&A...322....1B}, we estimate 
 \[
 W_n \propto \la z_n \ra ^{0.85}\, ,
@@ -316,7 +325,7 @@ While the first method suffers from the fact that the power-law index only holds
 
 We applied both analytic methods and the semianalytic one to data from KV450, following the separation into tomographic bins as in H18, and computed the ratio between our model for the observed correlation function $\xi_{\pm}^{\rm{obs}}$, and the model correlation function ignoring variations in depth, $\xi_{\pm}$. 
 
-We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} was binned by magnitude into roughly 20 bins. Afterwards, a linear relation between depth and effective number density was extracted. The KiDS-1000 survey was put on a Healpix grid, and for each pixel the limiting magnitude was calculated. According to this limiting magnitude, an effective number density was assigned, using the linear relation extracted above. For each pixel and each tomographic redshift bin we used the same limiting magnitude to assign an average source redshift distribution from the ones extracted in this work. In the uniform case, redshifts and number densities were sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks was computed. The number of realizations is 2000. Shape noise is omitted. 
+We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generate galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth is generated. In the variable case, the depth of KiDS-1000 data \citep{Kuijken:2019} is binned by magnitude into roughly 20 bins. Afterwards, a linear relation between depth and effective number density is extracted. The KiDS-1000 survey is put on a Healpix grid, and for each pixel the limiting magnitude is calculated. According to this limiting magnitude, an effective number density can be assigned, using the linear relation extracted above. For each pixel and each tomographic redshift bin we use the same limiting magnitude to assign an average source redshift distribution from the ones extracted in this work. In the uniform case, redshifts and number densities are sampled from the average of these tomographic sets. Finally, the ratio of the average lensing signals from the two mocks is computed. The number of realizations is 2000. Shape noise is omitted. 
 
 The results can be seen in Fig.~\ref{fig:all_xis}.
 	\begin{figure*}
@@ -330,9 +339,9 @@ We observe that for high-redshift bins, both analytic methods as well as the sem
 
 The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. Furthermore, we notice some strong features in the simulations at lower values of $\theta$.  As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations make use of the whole KiDS-1000 data, whereas the models rely on distributions extracted from KV450 data. Additionlly, the simulations take the full variations in depth into account, which include both scales smaller than one pointing (especially chip positions and dithering strategies) and scales larger than one pointing.
 
-An additional difference between the models and simulations is that in the models we assume an infinite footprint, whereas the simulations were performed with the actual KiDS-1000 footprint. In Appendix \ref{sec:expand_eoftheta} we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm}^{ij,\rm{obs}}$ for a specific survey footprint. With this model we can estimate the impacts of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for a quadratic footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
+An additional difference between the models and simulations is that in the models we assume an infinite footprint, whereas the simulations were performed with the actual KiDS-1000 footprint. In Appendix \ref{sec:expand_eoftheta} we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm}^{ij,\rm{obs}}$ for a specific survey footprint. With this model we can estimate the impact of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for a quadratic footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
 
-As the next step we chose a fiducial cosmology $\b \Phi$ and computed reference correlation functions $\xi_\pm^{ij}(\theta,\b\Phi)$ for each pair of redshift bins $i,j$. Using our semi-analytic model in Sect.~\ref{sec:xipm_semianalytic}, we derived the observed correlation function $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ from those. Then we ran a Markov-Chain Monte Carlo simulation to check for the resulting bias in the inferred cosmological parameters, using the covariance-matrix computed in H18. As our main interest lies in the $\Omega_{\rm m}$ - $\sigma_8$ combination, we restricted our analysis to those two parameters. As can be seen in Fig.~\ref{fig:mcmc_kids}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divided our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. As can be seen in Fig.~\ref{fig:mcmc_euclid}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant. Conveniently it seems that the parameter $S_8$ is considerably more robust against this effect.
+As the next step we choose a fiducial cosmology $\b \Phi$ and compute reference correlation functions $\xi_\pm^{ij}(\theta,\b\Phi)$ for each pair of redshift bins $i,j$. Using our semi-analytic model in Sect.~\ref{sec:xipm_semianalytic}, we derive the observed correlation function $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ from those. Then we run a Markov-Chain Monte Carlo simulation to check for the resulting bias in the inferred cosmological parameters, using the covariance-matrix computed in H18. As our main interest lies in the $\Omega_{\rm m}$ - $\sigma_8$ combination, we restrict our analysis to those two parameters. All other parameters are taken to be fixed as the best-fit values from H17. As can be seen in Fig.~\ref{fig:mcmc_kids}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. As can be seen in Fig.~\ref{fig:mcmc_euclid}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant at the level of approx.~$1\sigma$. Conveniently it seems that the parameter $S_8$ is considerably more robust against this effect.
 
 \begin{figure*}
 \begin{subfigure}{0.45\textwidth}
@@ -350,15 +359,15 @@ As the next step we chose a fiducial cosmology $\b \Phi$ and computed reference 
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}.
 
-To estimate the B-modes created by this effect, we have extracted the \emph{Complete Orthogonal Sets of E- and B-Mode Integrals} (COSEBIS, compare S10)
+To estimate the B-modes created by this effect, we extract the \emph{Complete Orthogonal Sets of E- and B-Mode Integrals} (COSEBIS, compare S10)
 %, once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then 
- for the correlation functions $\xi_\pm^{\rm{obs}}$ that have been modified under the semi-analytic model. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-modes.\todo{I will add a reference in the figure as soon as marika's paper is on arxiv}
+ for the correlation functions $\xi_\pm^{\rm{obs}}$ that have been modified under the semi-analytic model and for a reference set of correlation functions $\xi_\pm$. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-modes.\todo{I will add a reference in the figure as soon as marika's paper is on arxiv}
 
 
 \begin{figure*}
 \centering
 \includegraphics[width = 0.9\linewidth]{images/ebmodes0p5t72.pdf}
-\caption{Difference in the E-modes (top left) and B-modes (bottom right) between the reference and the observed correlation functions. For comparison: Total E-modes of the reference correlation function $E_n$ (top left) and B-modes measured in the KV450 survey by Asgari et al. $B_n^{\rm{KV450}}$ (bottom right). All E- and B-modes were calculated using the logarithmic COSEBIS in S10 for an angular range of $\theta_{\rm{min}}=0.\!^\prime 5,\,\theta_{\rm{max}}=72\arcmin$.}
+\caption{Difference in the E-modes (top left) and B-modes (bottom right) between the reference and the observed correlation functions. For comparison: Total E-modes of the reference correlation function $E_n$ and B-modes measured in the KV450 survey by Asgari et al. (in prep.) $B_n^{\rm{KV450}}$. All E- and B-modes were calculated using the logarithmic COSEBIS in S10 for an angular range of $\theta_{\rm{min}}=0.\!^\prime 5,\,\theta_{\rm{max}}=72\arcmin$.}
 \label{fig:bmodes_cosebi}
 \end{figure*}
 
@@ -366,9 +375,9 @@ To estimate the B-modes created by this effect, we have extracted the \emph{Comp
 
 \section{Discussion}
 \label{sec:discussion}
-With our semi-analytic model we describe the impacts of varying depth in ground-based cosmic shear surveys. During our analysis we have made several simplifications, which we discuss below.
+With our semi-analytic model we describe the impact of varying depth in ground-based cosmic shear surveys. During our analysis we have made several simplifications, which we discuss below.
 \begin{enumerate}
-\item In the most general terms, we are analysing the effects of a position-dependent selection function on cosmic shear surveys. In our analysis, this selection function was governed by the KiDS $r$-band depth of a pointing. This neglects a number of other effects: The depth in different bands and the seeing of a pointing will also modify the number densities and redshift distributions on the scale of a pointing, whereas dithering strategies as well as imperfections in the telescope and CCD cause modifications on sub-pointing scales. However, we believe that these effects are subdominant compared to the variations caused by the $r$-band depth.
+\item In the most general terms, we are analysing the effects of a position-dependent selection function on cosmic shear surveys. In our analysis, this selection function was governed by the KiDS $r$-band depth of a pointing. This neglects a number of other effects: The depth in different bands and the seeing of a pointing will also modify the number densities and redshift distributions on the scale of a pointing (although those variations are also correlated with $r$-band depth and thus at least partly accounted for), whereas dithering strategies as well as imperfections in the telescope and CCD cause modifications on sub-pointing scales. However, we believe that these effects are subdominant compared to the variations caused by the $r$-band depth.
 
 \item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the sample variance of the depth-distribution. We have assumed that the probability that any pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, it does not necessarily hold for a real survey. However, our analysis in App.~\ref{sec:expand_eoftheta} suggests that these effects are not significant for the KV450 survey. In the models, we have also assumed an uncorrelated distribution of the depth-function. As can be seen in Fig \ref{fig:all_xis}, this approximation introduces a small error when compared to the simulations.
 
@@ -379,7 +388,7 @@ Despite these repercussions, we are confident to say that the effects of varying
 
 We have shown that this effect can create B-modes. However, \todo{New asgari et al. comes here as soon as it is on arxiv}\citet{2018arXiv181002353A} measured the B-modes of the KV450 survey in the same $\theta$-range. Those B-modes are greater than the ones created by varying depth by a factor of approx.~$50$ and show a completely different pattern, so it is safe to say that the B-modes in the KV450 survey are not created by varying depth. An interesting observation is that the change in E-modes is as big as the created B-modes (compare Fig.~\ref{fig:bmodes_cosebi}). This means that as soon as this effect causes a significant bias in the cosmological parameters, it will also create significant B-modes\footnote{While this is no big surprise, it is not trivial. It could be possible that a systematic effect only creates E-modes and no B-modes, which would be extremely unfortunate as it could bias cosmological parameters without ever being detected by a B-mode analysis.}. Additionally, the created pattern is very characteristic, which makes it easy to recognize in a B-mode analysis of an actual survey.
 
-For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that a such a study should be conducted.
+For next-generation surveys like Euclid, this effect will be significant. Although Euclid is a space-based telescope, the photometric redshift determination will still be done by ground-based telescopes and therefore suffer from the same effects. While we did not yet perform a quantitative study of this effect for Euclid, we are certain that such a study should be conducted.
 
 While the cosmology dependency (compare Fig. \ref{fig:comparecosmo}) is not significant for the KV450 survey, it will be relevant for the Euclid survey. In that case, a calculation of the correction for this effect is necessary for various cosmologies, underlining the necessity for a fast, analytic model. \todo{For that example I took value from the 95\% CL of KV450 from H18. As the parameter constraints in Euclid are going to be much tighter, this is probably no longer true...}
 
